--- a/LMS/LMS/LMS.csproj
+++ b/LMS/LMS/LMS.csproj
@@ -370,7 +370,9 @@
     <Content Include="Views\Student\Delete.cshtml" />
     <Content Include="Views\Student\Details.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
-    <Content Include="Views\Subject\Index.cshtml" />
+    <Content Include="Views\Subject\AddSubjects.cshtml" />
+    <Content Include="Views\Subject\ViewSubjects.cshtml" />
+    <Content Include="Views\Subject\EditSubjects.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
