--- a/LMS/LMS/LMS.csproj
+++ b/LMS/LMS/LMS.csproj
@@ -238,6 +238,8 @@
       <DependentUpon>LMSDb.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CheckBoxListItem.cs" />
+    <Compile Include="Models\DateKeeperViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProgramViewModel.cs" />
@@ -378,6 +380,10 @@
     <Content Include="Views\Section\Delete.cshtml" />
     <Content Include="Views\Student\AssignSection.cshtml" />
     <Content Include="Views\Section\Details.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\CheckBoxListItem.cshtml" />
+    <Content Include="Views\Section\StudentAttendance.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\CheckBoxListItemStaff.cshtml" />
+    <Content Include="Views\Staff\StaffAttendance.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
