--- a/LMS/LMS/LMS.csproj
+++ b/LMS/LMS/LMS.csproj
@@ -401,6 +401,7 @@
     <Content Include="Views\Student\ViewSubjects.cshtml" />
     <Content Include="Views\Staff\StaffSubject.cshtml" />
     <Content Include="Views\Staff\ViewStaffSubjects.cshtml" />
+    <Content Include="Views\Shared\_Admin_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
