--- a/LMS/LMS/bin/LMS.dll.config
+++ b/LMS/LMS/bin/LMS.dll.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-9FORRLR;Initial Catalog=DB45;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="DB45Entities" connectionString="metadata=res://*/LMSDb.csdl|res://*/LMSDb.ssdl|res://*/LMSDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-9FORRLR;initial catalog=DB45;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-EGB6CH6;Initial Catalog=DB45;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DB45Entities" connectionString="metadata=res://*/LMSDb.csdl|res://*/LMSDb.ssdl|res://*/LMSDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EGB6CH6;initial catalog=DB45;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
